beautified fake waiting list :)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <p>Come back another time</p>
+    <p>I'll be working on this soon</p>
+    <p>Have a nice day :)</p>
     <script src="event.js"></script>
 </body>
 
