--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h2>Experience</h2>
           <div class="client__logos">
             <!-- TODO: Add Experience-->
-            
+
             <img
               src="./assets/images/chippy.png"
               class="client__logo"
@@ -165,7 +165,7 @@
                 <img
                   src="./assets/images/works/work-5.png"
                   class="work__image"
-                  alt="Project 3"
+                  alt="Project 2"
                 />
               </div>
             </div>
@@ -205,7 +205,7 @@
                 <img
                   src="./assets/images/works/work-2.png"
                   class="work__image"
-                  alt="Project 1"
+                  alt="Project 3"
                 />
               </div>
             </div>
@@ -244,7 +244,7 @@
                 <img
                   src="./assets/images/works/work-3.jpg"
                   class="work__image"
-                  alt="Project 3"
+                  alt="Project 4"
                 />
               </div>
             </div>
@@ -282,7 +282,7 @@
                 <img
                   src="./assets/images/works/work-4.png"
                   class="work__image"
-                  alt="Project 3"
+                  alt="Project 5"
                 />
               </div>
             </div>
@@ -405,7 +405,7 @@
 
         <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
         <p>
-          &copy; 2023 - <span id="date"></span>Designed by
+          &copy; <span class="date__begin">2023</span> - <span class="date__end"></span> Designed by
           <a href="https://github.com/noahweasley" class="link"
             >Ebenmelu Ifechukwu</a
           >.
