--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="./assets/images/favicon.png"
+      href="./assets/images/favicon.jpg"
     />
 
     <!-- Put your site title here -->
