--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
       Impactful Products
     </title>
 
-    <meta name="description" content="Add small description of yourslef." />
-    <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
+    <meta
+      name="description"
+      content="Software Engineer | Mobile Software Engineer"
+    />
+
     <meta
       name="keywords"
-      content="Put your name, skills and some coding keywords"
+      content="Ebenmelu Ifechukwu Emmanuel Noah Mobile Software Engineer Android SDK Android JetPack Java Kotlin Javascript Node JS Electron JS SQLite"
     />
     <link rel="stylesheet" href="index.css" />
   </head>
@@ -68,7 +71,6 @@
           <h2>Experience</h2>
           <div class="client__logos">
             <!-- TODO: Add Experience-->
-
           </div>
         </div>
       </section>
@@ -375,10 +377,7 @@
             </a>
           </li>
           <li class="footer__social-link-item">
-            <a
-              href="#"
-              title="Link to Codepen Profile"
-            >
+            <a href="#" title="Link to Codepen Profile">
               <img
                 src="./assets/svg/codepen.svg"
                 class="footer__social-image"
@@ -400,7 +399,8 @@
 
         <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
         <p>
-          &copy; <span class="date__begin">2023</span> - <span class="date__end"></span> Designed by
+          &copy; <span class="date__begin">2023</span> -
+          <span class="date__end"></span> Designed by
           <a href="https://github.com/noahweasley" class="link"
             >Ebenmelu Ifechukwu</a
           >.
