Add Skills section

--- a/index.html
+++ b/index.html
@@ -286,6 +286,16 @@
         </div>
       </section>
 
+      <!-- Skills section  -->
+      <section class="client" id="clients">
+        <div class="row">
+          <h2>Skills</h2>
+          <div class="client__logos">
+            <!-- TODO: Add Experience-->
+          </div>
+        </div>
+      </section>
+
       <!-- ***** About ***** -->
 
       <section class="about" id="about">
@@ -307,7 +317,6 @@
             </div>
 
             <div class="about__photo-container">
-
               <img
                 class="about__photo"
                 src="./assets/images/Profile.jpg"
