--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
         <nav class="nav" role="navigation">
           <ul class="nav__items">
             <li class="nav__item">
+              <a href="#clients" class="nav__link">Experience</a>
+            </li>
+            <li class="nav__item">
               <a href="#work" class="nav__link">Projects</a>
             </li>
             <li class="nav__item">
-              <a href="#clients" class="nav__link">Experience</a>
+              <a href="#education" class="nav__link">Education</a>
+            </li>
+            <li class="nav__item">
+              <a href="#skills" class="nav__link">Skills</a>
             </li>
             <li class="nav__item">
               <a href="#about" class="nav__link">About</a>
@@ -68,7 +74,7 @@
       <section class="client" id="clients">
         <div class="row">
           <h2>Experience</h2>
-          <div class="client__logos">
+          <div>
             <!-- TODO: Add Experience-->
           </div>
         </div>
@@ -290,7 +296,7 @@
       <section class="client" id="clients">
         <div class="row">
           <h2>Skills</h2>
-          <div class="client__logos">
+          <div>
             <!-- TODO: Add Skills -->
           </div>
         </div>
