--- a/index.html
+++ b/index.html
@@ -32,16 +32,10 @@
         <nav class="nav" role="navigation">
           <ul class="nav__items">
             <li class="nav__item">
-              <a href="#clients" class="nav__link">Experience</a>
-            </li>
-            <li class="nav__item">
               <a href="#work" class="nav__link">Projects</a>
             </li>
             <li class="nav__item">
-              <a href="#education" class="nav__link">Education</a>
-            </li>
-            <li class="nav__item">
-              <a href="#skills" class="nav__link">Skills</a>
+              <a href="#clients" class="nav__link">Resume</a>
             </li>
             <li class="nav__item">
               <a href="#about" class="nav__link">About</a>
@@ -68,17 +62,6 @@
 
     <main role="main">
       <!-- ***** Work ***** -->
-
-      <!-- ***** Experience***** -->
-
-      <section class="client" id="clients">
-        <div class="row">
-          <h2>Experience</h2>
-          <div>
-            <!-- TODO: Add Experience-->
-          </div>
-        </div>
-      </section>
 
       <section class="work" id="work">
         <div class="row">
@@ -292,12 +275,13 @@
         </div>
       </section>
 
-      <!-- Skills section  -->
+      <!-- ***** Experience***** -->
+
       <section class="client" id="clients">
         <div class="row">
-          <h2>Skills</h2>
+          <h2>Resume</h2>
           <div>
-            <!-- TODO: Add Skills -->
+            <!-- TODO: Add Experience-->
           </div>
         </div>
       </section>
@@ -391,7 +375,7 @@
             </a>
           </li>
           <li class="footer__social-link-item">
-            <a href="#" title="Link to Codepen Profile">
+            <a href="https://codepen.io/noahweasley" title="Link to Codepen Profile">
               <img
                 src="./assets/svg/codepen.svg"
                 class="footer__social-image"
