--- a/index.html
+++ b/index.html
@@ -3,21 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      type="image/png"
-      href="./assets/images/favicon.jpg"
-    />
+    <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.jpg" />
 
-    <title>
-      Ebenmelu Ifechukwu | Software Engineer Focused on Building Purposeful and
-      Impactful Products
-    </title>
+    <title>Ebenmelu Ifechukwu | Software Engineer Focused on Building Purposeful and Impactful Products</title>
 
-    <meta
-      name="description"
-      content="Software Engineer | Mobile Software Engineer"
-    />
+    <meta name="description" content="Software Engineer | Mobile Software Engineer" />
 
     <meta
       name="keywords"
@@ -35,7 +25,10 @@
               <a href="#work" class="nav__link">Projects</a>
             </li>
             <li class="nav__item">
-              <a href="#clients" class="nav__link">Resume</a>
+              <a href="#experience" class="nav__link">Experience</a>
+            </li>
+            <li class="nav__item">
+              <a href="#skills" class="nav__link">Skills</a>
             </li>
             <li class="nav__item">
               <a href="#about" class="nav__link">About</a>
@@ -51,32 +44,23 @@
           <h1 class="heading-primary">
             <span>Ebenmelu Ifechukwu</span>
           </h1>
-          <p>
-            Software Engineer Focused on Building Purposeful and Impactful
-            Products
-          </p>
+          <p>Software Engineer Focused on Building Purposeful and Impactful Products</p>
           <a href="#contact" class="btn btn--pink">Get in touch</a>
         </div>
       </div>
     </header>
 
     <main role="main">
-      <!-- ***** Work ***** -->
-
       <section class="work" id="work">
         <div class="row">
           <h2>Side Projects</h2>
           <div class="work__boxes">
-            <!-- Each div with the work__box class is a project. -->
-
             <div class="work__box">
               <div class="work__text">
                 <h3>S.M.D Desktop</h3>
                 <p>
-                  A Cross-Platform desktop application that seamlessly
-                  integrates with the Spotify API to help users discover,
-                  download, and enjoy their favorite songs from a single
-                  platform.
+                  A Cross-Platform desktop application that seamlessly integrates with the Spotify API to help users
+                  discover, download, and enjoy their favorite songs from a single platform.
                 </p>
                 <ul class="work__list">
                   <li>HTML</li>
@@ -92,28 +76,17 @@
                     href="https://noahweasley.github.io/SMD-Desktop/website/pages/downloads/get-smd.html"
                     target="_blank"
                     class="link__text"
+                    target="_blank"
                   >
                     Visit Download Page<span>&rarr;</span>
                   </a>
-                  <a
-                    href="https://github.com/noahweasley/SMD-Desktop"
-                    title="View Source Code"
-                    target="_blank"
-                  >
-                    <img
-                      src="./assets/svg/github.svg"
-                      class="work__code"
-                      alt="GitHub"
-                    />
+                  <a href="https://github.com/noahweasley/SMD-Desktop" title="View Source Code" target="_blank">
+                    <img src="./assets/svg/github.svg" class="work__code" alt="GitHub" />
                   </a>
                 </div>
               </div>
               <div class="work__image-box">
-                <img
-                  src="./assets/images/projects/project-1.png"
-                  class="work__image"
-                  alt="Project 1"
-                />
+                <img src="./assets/images/projects/project-1.png" class="work__image" alt="Project 1" />
               </div>
             </div>
 
@@ -128,30 +101,16 @@
                 </ul>
 
                 <div class="work__links">
-                  <a
-                    href="https://noahweasley.github.io/SMD-Desktop/website"
-                    class="link__text"
-                  >
+                  <a href="https://noahweasley.github.io/SMD-Desktop/website" class="link__text" target="_blank">
                     View Website<span>&rarr;</span>
                   </a>
-                  <a
-                    href="https://github.com/noahweasley/SMD-Desktop/tree/master/website"
-                  >
-                    <img
-                      src="./assets/svg/github.svg"
-                      class="work__code"
-                      title="View Source Code"
-                      alt="GitHub"
-                    />
+                  <a href="https://github.com/noahweasley/SMD-Desktop/tree/master/website" target="_blank">
+                    <img src="./assets/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub" />
                   </a>
                 </div>
               </div>
               <div class="work__image-box">
-                <img
-                  src="./assets/images/projects/project-5.png"
-                  class="work__image"
-                  alt="Project 2"
-                />
+                <img src="./assets/images/projects/project-5.png" class="work__image" alt="Project 2" />
               </div>
             </div>
 
@@ -159,9 +118,8 @@
               <div class="work__text">
                 <h3>Node User Settings (NPM Library)</h3>
                 <p>
-                  A universal but simple node library to implement user
-                  settings, built to work with Electron.js with little or no
-                  configurations.
+                  A universal but simple node library to implement user settings, built to work with Electron.js with little
+                  or no configurations.
                 </p>
                 <ul class="work__list">
                   <li>Javascript</li>
@@ -170,37 +128,23 @@
                 </ul>
 
                 <div class="work__links">
-                  <a
-                    href="https://www.npmjs.com/package/node-user-settings"
-                    class="link__text"
-                  >
+                  <a href="https://www.npmjs.com/package/node-user-settings" class="link__text" target="_blank">
                     View N.P.M Package <span>&rarr;</span>
                   </a>
-                  <a href="https://github.com/noahweasley/Node-User-Settings">
-                    <img
-                      src="./assets/svg/github.svg"
-                      class="work__code"
-                      title="View Source Code"
-                      alt="GitHub"
-                    />
+                  <a href="https://github.com/noahweasley/Node-User-Settings" target="_blank">
+                    <img src="./assets/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub" />
                   </a>
                 </div>
               </div>
               <div class="work__image-box">
-                <img
-                  src="./assets/images/projects/project-2.png"
-                  class="work__image"
-                  alt="Project 3"
-                />
+                <img src="./assets/images/projects/project-2.png" class="work__image" alt="Project 3" />
               </div>
             </div>
 
             <div class="work__box">
               <div class="work__text">
                 <h3>TimeLY</h3>
-                <p>
-                  An Android app that manages University students activities.
-                </p>
+                <p>An Android app that manages University students activities.</p>
                 <ul class="work__list">
                   <li>Java</li>
                   <li>XML</li>
@@ -212,25 +156,17 @@
                   <a
                     href="https://github.com/noahweasley/TimeLY/releases/download/v1.2.0/TimeLY_v1.2.0.apk"
                     class="link__text"
+                    target="_blank"
                   >
                     Download Latest Version<span>&rarr;</span>
                   </a>
-                  <a href="https://github.com/noahweasley/TimeLY">
-                    <img
-                      src="./assets/svg/github.svg"
-                      class="work__code"
-                      title="View Source Code"
-                      alt="GitHub"
-                    />
+                  <a href="https://github.com/noahweasley/TimeLY" target="_blank">
+                    <img src="./assets/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub" />
                   </a>
                 </div>
               </div>
               <div class="work__image-box">
-                <img
-                  src="./assets/images/projects/project-3.jpg"
-                  class="work__image"
-                  alt="Project 4"
-                />
+                <img src="./assets/images/projects/project-3.jpg" class="work__image" alt="Project 4" />
               </div>
             </div>
 
@@ -245,48 +181,39 @@
                 </ul>
 
                 <div class="work__links">
-                  <a
-                    href="https://noahweasley.github.io/Color-Scheme-Generator-V2/"
-                    class="link__text"
-                  >
+                  <a href="https://noahweasley.github.io/Color-Scheme-Generator-V2/" class="link__text" target="_blank">
                     View Website<span>&rarr;</span>
                   </a>
-                  <a
-                    href="https://github.com/noahweasley/Color-Scheme-Generator-V2"
-                  >
-                    <img
-                      src="./assets/svg/github.svg"
-                      class="work__code"
-                      title="View Source Code"
-                      alt="GitHub"
-                    />
+                  <a href="https://github.com/noahweasley/Color-Scheme-Generator-V2" target="_blank">
+                    <img src="./assets/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub" />
                   </a>
                 </div>
               </div>
               <div class="work__image-box">
-                <img
-                  src="./assets/images/projects/project-4.png"
-                  class="work__image"
-                  alt="Project 5"
-                />
+                <img src="./assets/images/projects/project-4.png" class="work__image" alt="Project 5" />
               </div>
             </div>
           </div>
         </div>
       </section>
 
-      <!-- ***** Experience***** -->
-
-      <section class="client" id="clients">
+      <section class="experience" id="experience">
         <div class="row">
-          <h2>Resume</h2>
+          <h2>Experience</h2>
           <div>
             <!-- TODO: Add Experience-->
           </div>
         </div>
       </section>
 
-      <!-- ***** About ***** -->
+      <section class="skills" id="skills">
+        <div class="row">
+          <h2>Skills</h2>
+          <div>
+            <!-- TODO: Add Skills -->
+          </div>
+        </div>
+      </section>
 
       <section class="about" id="about">
         <div class="row">
@@ -294,48 +221,36 @@
           <div class="about__content">
             <div class="about__text">
               <p>
-                Hardworking and relentless software engineer with a strong
-                passion for technology and problem-solving. Possessing excellent
-                coding skills, attention to detail, and a persistent work ethic,
-                ready to bring these qualities to a challenging role and
-                contribute to developing cutting-edge software.Determined to
-                continue learning and growing as a developer, eager to work with
-                a team and collaborate to deliver exceptional results.
+                I'm a Hardworking and relentless Software Engineer that really loves building real-world software that people
+                actually use. I spend most of my time coding and when I am not coding, I listen to music or like taking long
+                walks. It gives me joy to see someone using what I have created, hence the reason I spend months or years
+                just to perfect the software I have built. I love mentoring; teaching people what I know. I'm a strong
+                collaborator and always ready to work with a team of talented Software Engineers
               </p>
 
-              <a href="./assets/documents/Resume.pdf" class="btn">My Resume</a>
+              <a href="./assets/documents/Resume.pdf" target="_blank" class="btn">My Resume</a>
             </div>
 
             <div class="about__photo-container">
-              <img
-                class="about__photo"
-                src="./assets/images/Profile.jpg"
-                alt=""
-              />
+              <img class="about__photo" src="./assets/images/Profile.jpg" alt="" />
             </div>
           </div>
         </div>
       </section>
     </main>
 
-    <!-- ***** Contact ***** -->
-
     <section class="contact" id="contact">
       <div class="row">
         <h2>Get in Touch</h2>
         <div class="contact__info">
           <p>
-            Are you in need of an expert in mobile, web, and desktop application
-            development? Look no further, because I'm here to help you make your
-            tech dreams a reality. With my extensive knowledge and experience, I
-            provide customized solutions that cater to the unique needs of my
-            clients. Whether it's designing a cutting-edge mobile app, creating
-            an intuitive user interface for your web platform, or developing a
-            powerful desktop application, I've got you covered. I believe that
-            collaboration is the key to success, which is why I work closely
-            with my clients to ensure that their vision is brought to life.
-            Together, we can create innovative solutions that will wow your
-            users and take your business to the next level. So, let's team up
+            Are you in need of an expert in mobile, web, and desktop application development? Look no further, because I'm
+            here to help you make your tech dreams a reality. With my extensive knowledge and experience, I provide
+            customized solutions that cater to the unique needs of my clients. Whether it's designing a cutting-edge native
+            or cross-platform mobile app, creating an intuitive user interface for your web platform, or developing a
+            cross-platform desktop application, I've got you covered. I believe that collaboration is the key to success,
+            which is why I work closely with my clients to ensure that their vision is brought to life. Together, we can
+            create innovative solutions that will wow your users and take your business to the next level. So, let's team up
             and build something amazing!
           </p>
 
@@ -344,47 +259,26 @@
       </div>
     </section>
 
-    <!-- ***** Footer ***** -->
-
     <footer role="contentinfo" class="footer">
       <div class="row">
-        <!-- Update the links to point to your accounts -->
         <ul class="footer__social-links">
           <li class="footer__social-link-item">
-            <a
-              href="https://twitter.com/noah_weasley_1"
-              title="Link to Twitter Profile"
-            >
-              <img
-                src="./assets/svg/twitter.svg"
-                class="footer__social-image"
-                alt="Twitter"
-              />
+            <a href="https://twitter.com/noah_weasley_1" title="Link to Twitter Profile" target="_blank">
+              <img src="./assets/svg/twitter.svg" class="footer__social-image" alt="Twitter" />
             </a>
           </li>
           <li class="footer__social-link-item">
-            <a
-              href="https://github.com/noahweasley"
-              title="Link to Github Profile"
-            >
-              <img
-                src="./assets/svg/github.svg"
-                class="footer__social-image"
-                alt="Github"
-              />
+            <a href="https://github.com/noahweasley" title="Link to Github Profile" target="_blank">
+              <img src="./assets/svg/github.svg" class="footer__social-image" alt="Github" />
             </a>
           </li>
           <li class="footer__social-link-item">
-            <a href="https://codepen.io/noahweasley" title="Link to Codepen Profile">
-              <img
-                src="./assets/svg/codepen.svg"
-                class="footer__social-image"
-                alt="Codepen"
-              />
+            <a href="https://codepen.io/noahweasley" title="Link to Codepen Profile" target="_blank">
+              <img src="./assets/svg/codepen.svg" class="footer__social-image" alt="Codepen" />
             </a>
           </li>
           <li class="footer__social-link-item">
-            <a href="https://www.linkedin.com/in/ebenmelu-ifechukwu">
+            <a href="https://www.linkedin.com/in/ebenmelu-ifechukwu" target="_blank">
               <img
                 src="./assets/svg/linkedin.svg"
                 title="Link to Linkedin Profile"
@@ -396,22 +290,15 @@
         </ul>
 
         <p>
-          &copy; <span class="date__begin">2023</span> -
-          <span class="date__end"></span> Designed by
-          <a href="https://github.com/noahweasley" class="link"
-            >Ebenmelu Ifechukwu</a
-          >.
+          &copy; <span class="date__begin">2023</span> - <span class="date__end"></span> Designed by
+          <a href="https://github.com/noahweasley" class="link" target="_blank">Ebenmelu Ifechukwu</a>.
         </p>
         <div class="footer__github-buttons"></div>
       </div>
     </footer>
 
     <a href="#top" class="back-to-top" title="Back to Top">
-      <img
-        src="./assets/svg/arrow-up.svg"
-        alt="Back to Top"
-        class="back-to-top__image"
-      />
+      <img src="./assets/svg/arrow-up.svg" alt="Back to Top" class="back-to-top__image" />
     </a>
     <script src="./index.js"></script>
   </body>
