Add resume timeline

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a href="#work" class="nav__link">Projects</a>
             </li>
             <li class="nav__item">
-              <a href="#experience" class="nav__link">Experience</a>
+              <a href="#resume" class="nav__link">Resume</a>
             </li>
             <li class="nav__item">
               <a href="#skills" class="nav__link">Skills</a>
@@ -197,11 +197,30 @@
         </div>
       </section>
 
-      <section class="experience" id="experience">
+      <section class="resume" id="resume">
         <div class="row">
-          <h2>Experience</h2>
+          <h2>Resume</h2>
           <div>
-            <!-- TODO: Add Experience-->
+            <div class="timeline">
+              <div class="container left">
+                <div class="content">
+                  <h2>2017</h2>
+                  <p>Lorem ipsum..</p>
+                </div>
+              </div>
+              <div class="container right">
+                <div class="content">
+                  <h2>2016</h2>
+                  <p>Lorem ipsum..</p>
+                </div>
+              </div>
+              <div class="container right">
+                <div class="content">
+                  <h2>2016</h2>
+                  <p>Lorem ipsum..</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
