Add Resume text

--- a/index.html
+++ b/index.html
@@ -204,20 +204,23 @@
             <div class="timeline">
               <div class="container left">
                 <div class="content">
-                  <h2>2017</h2>
-                  <p>Lorem ipsum..</p>
+                  <h2>2017 - 2022</h2>
+                  <h3>Nnamdi Azikiwe University</h3>
+                  <p>Electronics and Computer Engineering</p>
                 </div>
               </div>
               <div class="container right">
                 <div class="content">
-                  <h2>2016</h2>
-                  <p>Lorem ipsum..</p>
+                  <h2>March 2021 - August 2021</h2>
+                  <h3>Native Android Developer</h3>
+                  <p>Leon Enterprise (Tune L.L.C)</p>
                 </div>
               </div>
               <div class="container right">
                 <div class="content">
-                  <h2>2016</h2>
-                  <p>Lorem ipsum..</p>
+                  <h2>Dec 2022 - Present</h2>
+                  <h3>Flutter Developer</h3>
+                  <p>Technobs Digital Solutions</p>
                 </div>
               </div>
             </div>
