--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                   A Cross-Platform desktop application that seamlessly integrates with the Spotify API to help users
                   discover, download, and enjoy their favorite songs from a single platform.
                 </p>
+                <h4>Tech Stack</h4>
                 <ul class="work__list">
                   <li>HTML</li>
                   <li>CSS</li>
@@ -94,6 +95,7 @@
               <div class="work__text">
                 <h3>S.M.D Product Website</h3>
                 <p>Product website built to ease download of S.M.D Desktop.</p>
+                <h4>Tech Stack</h4>
                 <ul class="work__list">
                   <li>HTML</li>
                   <li>CSS</li>
@@ -121,6 +123,7 @@
                   A universal but simple node library to implement user settings, built to work with Electron.js with little
                   or no configurations.
                 </p>
+                <h4>Tech Stack</h4>
                 <ul class="work__list">
                   <li>Javascript</li>
                   <li>Node JS</li>
@@ -145,6 +148,7 @@
               <div class="work__text">
                 <h3>TimeLY</h3>
                 <p>An Android app that manages University students activities.</p>
+                <h4>Tech Stack</h4>
                 <ul class="work__list">
                   <li>Java</li>
                   <li>XML</li>
@@ -174,6 +178,7 @@
               <div class="work__text">
                 <h3>Color Scheme Generator</h3>
                 <p>A random color scheme generator</p>
+                <h4>Tech Stack</h4>
                 <ul class="work__list">
                   <li>HTML</li>
                   <li>CSS</li>
