--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
                 <ul class="work__list">
                   <li>HTML</li>
                   <li>CSS</li>
+                  <li>Photon CSS (CSS Framework)</li>
                   <li>JavaScript</li>
                   <li>Node JS</li>
                   <li>Electron JS</li>
                   <li>SQLite</li>
+                  <li>Jest (Test Library)</li>
                 </ul>
 
                 <div class="work__links">
@@ -127,7 +129,7 @@
                 <ul class="work__list">
                   <li>Javascript</li>
                   <li>Node JS</li>
-                  <li>Jest</li>
+                  <li>Jest (Test Library)</li>
                 </ul>
 
                 <div class="work__links">
