--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="nav" role="navigation">
           <ul class="nav__items">
             <li class="nav__item">
-              <a href="#work" class="nav__link">Projects</a>
+              <a href="#project" class="nav__link">Projects</a>
             </li>
             <li class="nav__item">
               <a href="#resume" class="nav__link">Resume</a>
@@ -51,19 +51,19 @@
     </header>
 
     <main role="main">
-      <section class="work" id="work">
+      <section class="project" id="project">
         <div class="row">
           <h2>Side Projects</h2>
-          <div class="work__boxes">
-            <div class="work__box">
-              <div class="work__text">
+          <div class="project__boxes">
+            <div class="project__box">
+              <div class="project__text">
                 <h3>S.M.D Desktop</h3>
                 <p>
                   A Cross-Platform desktop application that seamlessly integrates with the Spotify API to help users
                   discover, download, and enjoy their favorite songs from a single platform.
                 </p>
                 <h4>Tech Stack</h4>
-                <ul class="work__list">
+                <ul class="project__list">
                   <li>HTML</li>
                   <li>CSS</li>
                   <li>Photon CSS (CSS Framework)</li>
@@ -74,7 +74,7 @@
                   <li>Jest (Test Library)</li>
                 </ul>
 
-                <div class="work__links">
+                <div class="project__links">
                   <a
                     href="https://noahweasley.github.io/SMD-Desktop/website/pages/downloads/get-smd.html"
                     target="_blank"
@@ -84,81 +84,81 @@
                     Visit Download Page<span>&rarr;</span>
                   </a>
                   <a href="https://github.com/noahweasley/SMD-Desktop" title="View Source Code" target="_blank">
-                    <img src="./assets/svg/github.svg" class="work__code" alt="GitHub" />
+                    <img src="./assets/svg/github.svg" class="project__code" alt="GitHub" />
                   </a>
                 </div>
               </div>
-              <div class="work__image-box">
-                <img src="./assets/images/projects/project-1.png" class="work__image" alt="Project 1" />
+              <div class="project__image-box">
+                <img src="./assets/images/projects/project-1.png" class="project__image" alt="Project 1" />
               </div>
             </div>
 
-            <div class="work__box">
-              <div class="work__text">
+            <div class="project__box">
+              <div class="project__text">
                 <h3>S.M.D Product Website</h3>
                 <p>Product website built to ease download of S.M.D Desktop.</p>
                 <h4>Tech Stack</h4>
-                <ul class="work__list">
+                <ul class="project__list">
                   <li>HTML</li>
                   <li>CSS</li>
                   <li>Javascript</li>
                 </ul>
 
-                <div class="work__links">
+                <div class="project__links">
                   <a href="https://noahweasley.github.io/SMD-Desktop/website" class="link__text" target="_blank">
                     View Website<span>&rarr;</span>
                   </a>
                   <a href="https://github.com/noahweasley/SMD-Desktop/tree/master/website" target="_blank">
-                    <img src="./assets/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub" />
+                    <img src="./assets/svg/github.svg" class="project__code" title="View Source Code" alt="GitHub" />
                   </a>
                 </div>
               </div>
-              <div class="work__image-box">
-                <img src="./assets/images/projects/project-5.png" class="work__image" alt="Project 2" />
+              <div class="project__image-box">
+                <img src="./assets/images/projects/project-5.png" class="project__image" alt="Project 2" />
               </div>
             </div>
 
-            <div class="work__box">
-              <div class="work__text">
+            <div class="project__box">
+              <div class="project__text">
                 <h3>Node User Settings (NPM Library)</h3>
                 <p>
                   A universal but simple node library to implement user settings, built to work with Electron.js with little
                   or no configurations.
                 </p>
                 <h4>Tech Stack</h4>
-                <ul class="work__list">
+                <ul class="project__list">
                   <li>Javascript</li>
                   <li>Node JS</li>
                   <li>Jest (Test Library)</li>
                 </ul>
 
-                <div class="work__links">
+                <div class="project__links">
                   <a href="https://www.npmjs.com/package/node-user-settings" class="link__text" target="_blank">
                     View N.P.M Package <span>&rarr;</span>
                   </a>
                   <a href="https://github.com/noahweasley/Node-User-Settings" target="_blank">
-                    <img src="./assets/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub" />
+                    <img src="./assets/svg/github.svg" class="project__code" title="View Source Code" alt="GitHub" />
                   </a>
                 </div>
               </div>
-              <div class="work__image-box">
-                <img src="./assets/images/projects/project-2.png" class="work__image" alt="Project 3" />
+              <div class="project__image-box">
+                <img src="./assets/images/projects/project-2.png" class="project__image" alt="Project 3" />
               </div>
             </div>
 
-            <div class="work__box">
-              <div class="work__text">
+            <div class="project__box">
+              <div class="project__text">
                 <h3>TimeLY</h3>
                 <p>An Android app that manages University students activities.</p>
                 <h4>Tech Stack</h4>
-                <ul class="work__list">
+                <ul class="project__list">
                   <li>Java</li>
                   <li>XML</li>
                   <li>SQL</li>
                   <li>Android S.D.K</li>
                 </ul>
 
-                <div class="work__links">
+                <div class="project__links">
                   <a
                     href="https://github.com/noahweasley/TimeLY/releases/download/v1.2.0/TimeLY_v1.2.0.apk"
                     class="link__text"
@@ -167,37 +167,37 @@
                     Download Latest Version<span>&rarr;</span>
                   </a>
                   <a href="https://github.com/noahweasley/TimeLY" target="_blank">
-                    <img src="./assets/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub" />
+                    <img src="./assets/svg/github.svg" class="project__code" title="View Source Code" alt="GitHub" />
                   </a>
                 </div>
               </div>
-              <div class="work__image-box">
-                <img src="./assets/images/projects/project-3.jpg" class="work__image" alt="Project 4" />
+              <div class="project__image-box">
+                <img src="./assets/images/projects/project-3.jpg" class="project__image" alt="Project 4" />
               </div>
             </div>
 
-            <div class="work__box">
-              <div class="work__text">
+            <div class="project__box">
+              <div class="project__text">
                 <h3>Color Scheme Generator</h3>
                 <p>A random color scheme generator</p>
                 <h4>Tech Stack</h4>
-                <ul class="work__list">
+                <ul class="project__list">
                   <li>HTML</li>
                   <li>CSS</li>
                   <li>Javascript</li>
                 </ul>
 
-                <div class="work__links">
+                <div class="project__links">
                   <a href="https://noahweasley.github.io/Color-Scheme-Generator-V2/" class="link__text" target="_blank">
                     View Website<span>&rarr;</span>
                   </a>
                   <a href="https://github.com/noahweasley/Color-Scheme-Generator-V2" target="_blank">
-                    <img src="./assets/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub" />
+                    <img src="./assets/svg/github.svg" class="project__code" title="View Source Code" alt="GitHub" />
                   </a>
                 </div>
               </div>
-              <div class="work__image-box">
-                <img src="./assets/images/projects/project-4.png" class="work__image" alt="Project 5" />
+              <div class="project__image-box">
+                <img src="./assets/images/projects/project-4.png" class="project__image" alt="Project 5" />
               </div>
             </div>
           </div>
