--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span>Ebenmelu Ifechukwu</span>
           </h1>
           <p>Software Engineer Focused on Building Purposeful and Impactful Products</p>
-          <a href="#contact" class="btn btn--pink">Get in touch</a>
+          <a href="#contact" class="btn btn--accent">Get in touch</a>
         </div>
       </div>
     </header>
