Add skills section

--- a/index.html
+++ b/index.html
@@ -206,21 +206,21 @@
           <h2>Resume</h2>
           <div>
             <div class="timeline">
-              <div class="container left">
+              <div class="timeline__container left">
                 <div class="content">
                   <h2>2017 - 2022</h2>
                   <h3>Nnamdi Azikiwe University</h3>
                   <p>Electronics and Computer Engineering</p>
                 </div>
               </div>
-              <div class="container right">
+              <div class="timeline__container right">
                 <div class="content">
                   <h2>March 2021 - August 2021</h2>
                   <h3>Native Android Developer</h3>
                   <p>Leon Enterprise (Tune L.L.C)</p>
                 </div>
               </div>
-              <div class="container right">
+              <div class="timeline__container right">
                 <div class="content">
                   <h2>Dec 2022 - Present</h2>
                   <h3>Flutter Developer</h3>
@@ -235,8 +235,34 @@
       <section class="skills" id="skills">
         <div class="row">
           <h2>Skills</h2>
-          <div>
-            <!-- TODO: Add Skills -->
+
+          <div class="column">
+            <div class="row">
+              <p>Java</p>
+              <div class="skill__container">
+                <div class="skill java" style="--strength: 90%">90%</div>
+              </div>
+
+              <p>JavaScript</p>
+              <div class="skill__container">
+                <div class="skill javascript" style="--strength: 75%">70%</div>
+              </div>
+
+              <p>Kotlin</p>
+              <div class="skill__container">
+                <div class="skill kotlin" style="--strength: 30%">30%</div>
+              </div>
+
+              <p>Android S.D.K</p>
+              <div class="skill__container">
+                <div class="skill android-sdk" style="--strength: 60%">60%</div>
+              </div>
+
+              <p>Node JS</p>
+              <div class="skill__container">
+                <div class="skill node-js" style="--strength: 70%">75%</div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -250,8 +276,8 @@
                 I'm a Hardworking and relentless Software Engineer that really loves building real-world software that people
                 actually use. I spend most of my time coding and when I am not coding, I listen to music or like taking long
                 walks. It gives me joy to see someone using what I have created, hence the reason I spend months or years
-                just to perfect the software I have built. I love mentoring; teaching people what I know. I'm a strong
-                collaborator and always ready to work with a team of talented Software Engineers
+                just to perfect the software I have built. I'm a strong collaborator, I love mentoring and I'm always ready
+                to work with a team of talented Software Engineers
               </p>
 
               <a href="./assets/documents/Resume.pdf" target="_blank" class="btn">My Resume</a>
