Add Skills category heading

--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 
           <div class="column">
             <div class="row">
+              <h3>Software Development</h3>
               <p>Java</p>
               <div class="skill__container">
                 <div class="skill java" style="--strength: 90%">90%</div>
